[#4871] Fix style for overflow

--- a/web/src/main/webapp/v2/src/app/core/components/real-time/new/new-real-time-agent-chart.component.css
+++ b/web/src/main/webapp/v2/src/app/core/components/real-time/new/new-real-time-agent-chart.component.css
@@ -1,10 +1,6 @@
 :host {
     display: block;
     width: 100%;
-    max-height: 100%;
-    overflow-y: auto;
-}
-
-canvas {
-    border: 1px solid black;
+    /* max-height: 100%;
+    overflow-y: auto; */
 }
